# KnowledgeCurationV2

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  dynamic_lr_agent_context_from_systematic_review_papers.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  env.py  manager.py  run.py
app/architectures/: __init__.py
app/architectures/baseline/: __init__.py  constants.py  db.py  deduper.py  errors.py  filters.py  identity.py  loop_control.py  metrics.py  models.py  normalizer.py  pipeline.py  publisher.py  query_builder.py  scorer.py  semantic_scholar_client.py  target_check.py  validator.py
app/architectures/multi_agent/: __init__.py  pipeline.py
app/architectures/single_agent/: __init__.py  pipeline.py
app/sources/: __init__.py
app/state/: __init__.py  schemas.py  store.py
baseline_comparison/: baseline_comparison.html  baseline_comparison.md  baseline_synthesis.md
data/: papers.ndjson  rejects.ndjson  run_history.ndjson  survey_config.json  system_status.json
data/comparison/: baseline_comparison.md
data/comparison/runs/: baseline-20260617T083430559041.json  baseline-20260617T083803404878.json
docs/: baseline_technical.md  pipeline.tex  pipeline_for_everyone.md  qa_scoring_database_queries.md
site/: index.html
site/data/: changelog.md  papers.json  rejects.json  run_history.json  survey_config.json
tests/baseline/: conftest.py  test_db.py  test_deduper.py  test_filters.py  test_identity.py  test_normalizer.py  test_pipeline.py  test_publisher.py  test_query_builder.py  test_scorer.py
