[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-lr"
version = "0.1.0"
description = "Dynamic-LR: deterministic and agentic literature retrieval / survey management"
readme = "README.md"
requires-python = ">=3.10"
# Runtime is intentionally stdlib-only (urllib, sqlite3, json, dataclasses).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Live API tests are opt-in only.
markers = [
    "live: tests that hit the live Semantic Scholar API (skipped by default)",
]
